--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     });
     tour.addStep('title', {
         text: [
-            'Select a specific location in this area (if multiple)',
+            'Select a specific location in this area (if multiple are available)',
         ],
         attachTo: '#subtext_area bottom',
         buttons: [
@@ -292,7 +292,7 @@
     });
     tour.addStep('title', {
         text: [
-            'Select a method of encounter',
+            'Select a method of encounter (if multiple are available)',
         ],
         attachTo: '#subtext_method bottom',
         buttons: [
